-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.1.0-beta
-
None
Keyboard shortcut defaults are quite incompatible between platforms, and I have Linux, OSX and Windows machines on my KVM, so I usually have to customize Creator on each platform in order to be able to work the same way with the same keyboard on all of them. Then every time there is a new Creator version, the preferences are lost and this must be redone. Of course I need to test prerelease versions too, and sometimes switch back to the release version, so it needs to be done again and again. It's very annoying and I don't see why it can't be stabilized. If the format of preferences in general really needs to change with every version, then maybe the keyboard shortcuts should be stored in a separate file. Then maybe I could just copy the file to each platform. Maybe it could even be stored in a place where Creator will never overwrite it, but just read it.
For Gerrit Dashboard: QTCREATORBUG-11947 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
82564,2 | Avoid removing the shortcut settings of older Qt Creator versions | 3.1 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |