Avoid removing the shortcut settings of older Qt Creator versions

The format has changed in 3.1, but keep the old settings around for a
while, in case that people switch back to 3.0 (or earlier).

Task-number: QTCREATORBUG-11947
Change-Id: I3ad6075c93f614364aae53e8291e937050277140
Reviewed-by: Shawn Rutledge <shawn.rutledge@digia.com>
Reviewed-by: Eike Ziller <eike.ziller@digia.com>